# jumble-rs

./: Cargo.toml  README.md  index.html  package-lock.json
.github/workflows/: build.yml
assets/js/: device.js  prevent-refresh.js
src/: app.rs  main.rs  pkg.rs
